# client

./: .gitignore  README.md  docker-compose.yml  peering  peering-bgp  peering-config  peering-openvpn  peering-prefix  peering.py  requirements.txt  shell.nix
bird/: pfx2id.txt
bird/configs/: 224.conf  bird.conf  export_amsix_226.conf  export_amsix_252.conf  export_amsterdam01_224.conf  export_amsterdam01_228.conf  export_amsterdam01_231.conf  (+61 more)
certs/: .gitignore  ca.crt
client.wiki/: Dumping-Routing-Table.md  Home.md
configs/: announcement_example.json  announcement_schema.json  experiment_schema.json
docker/: Dockerfile  enablev6.sh  entrypoint.sh
quagga/: bgpd.conf
scripts/: peering-app  peering-appns  peering-bgp  peering-config  peering-openvpn  peering-prefix  peering-proxy  peeringcontroller.sh
utils/: README.md  birdsock.py  dump-peer-routes.sh  export-peers-list.py  get-peer-csv.sh  mux-metadata.csv  requirements.txt  vultr-pop-asn-type-2023-09.csv
utils/vultr-provider-matrix/: Cargo.toml  README.md
utils/vultr-provider-matrix/src/: checks.rs  inout.rs  lib.rs  main.rs  routes.rs
utils/vultr-provider-matrix/tests/: integration_test.rs
utils/vultr-provider-matrix/tests/data/: vtr_fail_as_inconsistent_types.table.jsonl.bz2  vtr_fail_customer_large_comm.table.jsonl.bz2  vtr_fail_inconsistent_large_comm.table.jsonl.bz2  vtr_fail_json_parse.table.jsonl.bz2  vtr_fail_neighbor_inconsistency.table.jsonl.bz2  vtr_fail_route_inconsistent_types.table.jsonl.bz2  vtr_fail_route_missing_neighbor.table.jsonl.bz2  vtr_pass_all_checks.table.jsonl.bz2
(+174 files in other folders)
