[package]
name = "vultr-provider-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bzip2 = "0.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
rayon = "1.7"
regex = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"

[dev-dependencies]
tempfile = "3.8"
